[tool.poetry]
name = "clown-energy"
version = "0.1.0"
description = ""
authors = ["asmr-hex <c@polygon.pizza>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
